@@ -31,6 +31,9 @@ import java.io.PrintWriter;
 import java.io.Reader;
 import java.io.StreamTokenizer;
 import java.io.StringWriter;
+import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.EmptyStackException;
 import java.util.Hashtable;
 import java.util.NoSuchElementException;
@@ -171,16 +174,16 @@ public class Munge {
     String source = null;
     String block = null;
 
-    final String[] commands = { "if", "if_not", "else", "end" };
-    final int IF = 0;
-    final int IF_NOT = 1;
-    final int ELSE = 2;
-    final int END = 3;
-    final int numCommands = 4;
+    static final String[] commands = { "if", "if_not", "else", "end" };
+    static final int IF = 0;
+    static final int IF_NOT = 1;
+    static final int ELSE = 2;
+    static final int END = 3;
+    static final int numCommands = 4;
 
-    final int EOF = 0;
-    final int COMMENT = 1;     // text surrounded by /* */ delimiters
-    final int CODE = 2;        // can just be whitespace
+    static final int EOF = 0;
+    static final int COMMENT = 1;     // text surrounded by /* */ delimiters
+    static final int CODE = 2;        // can just be whitespace
 
     private IFeatureProject featureProject;
 
@@ -309,15 +312,13 @@ public class Munge {
     }
 
     void cmd_if(String version) {
-        Boolean b = new Boolean(printing);
-        stack.push(b);
+        stack.push(Boolean.valueOf(printing));
         printing = (symbols.get(version) != null);
         checkNesting();
     }
 
     void cmd_if_not(String version) {
-        Boolean b = new Boolean(printing);
-        stack.push(b);
+        stack.push(Boolean.valueOf(printing));
         printing = (symbols.get(version) == null);
         checkNesting();
     }
@@ -612,6 +613,22 @@ public class Munge {
             try {
                 munge.process();
                 munge.close();
+                final File f = new File(outFiles[i]);
+                if (f.length() == 0) {
+                	f.delete();
+                } else {
+                	boolean notEmpty = false;
+                	for (String line : Files.readAllLines(Paths.get(outFiles[i]), Charset.defaultCharset())) {
+                		if (!line.trim().isEmpty()) { 
+                			notEmpty = true;
+                			break;
+                		}
+                	}
+                	if (!notEmpty) {
+                		f.delete();
+                	}
+                }
+                
             } catch (IOException e) {
                 MungeCorePlugin.getDefault().logError(e);
             }
